# ros_workspace

./: .gitignore  README.md  pixi.toml  pyrightconfig.json
.github/workflows/: ci.yaml  test.yml
src/navigator/: CMakeLists.txt  package.xml  pixi.toml  pyproject.toml  recipe.yaml
src/navigator-py/: package.xml  pixi.toml  pyproject.toml  recipe.yaml  setup.cfg  setup.py
src/navigator-py/navigator/: navigator.py
src/navigator-py/navigator-py/: navigator.py
src/navigator/launch/: turtlesim_demo.launch.xml
src/navigator/navigator/: navigator.py
src/navigator/src/: navigator.cpp
src/navigator_py/: package.xml  pixi.toml  setup.py
src/ros-conda-support/: build-python.sh  build.sh  recipe.yaml
src/talker/: pixi.toml  pyproject.toml  recipe.yaml  setup.py
src/talker-py/: package.xml  pixi.toml  setup.cfg  setup.py
src/talker-py/talker_py/: talker.py
src/talker/launch/: py_nav_launch.py
src/talker/pkg/info/: about.json  index.json  link.json  paths.json
src/talker/talker/: talker.py
