[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "navigator"
version = "0.0.0"
description = "TODO: Package description"
license = { text = "TODO: License declaration" }
authors = [{ name = "rarts", email = "ruben.arts@hotmail.com" }]
maintainers = [{ name = "rarts", email = "ruben.arts@hotmail.com" }]

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
navigator = "navigator.navigator:main"

[tool.setuptools.packages.find]
include = ["navigator"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/navigator"]
"share/navigator" = ["package.xml"]
[tool.pixi.workspace]

platforms = ["osx-arm64"]
channels = ["conda-forge", "robostack-staging"]
preview = ["pixi-build"]

[tool.pixi.package]
name = "navigator-py"
version = "1.2.3"

[tool.pixi.build-system]
build-backend = "pixi-build-python"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]
dependencies = ["pixi-build-python"]

[tool.pixi.dependencies]
ros-humble-rclpy = ">=3.3.11,<4"
ros-humble-geometry-msgs = ">=4.2.3,<5"
ros-humble-turtlesim = ">=1.4.2,<2"
