[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "navigator-py"
version = "0.0.0"

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
navigator = "navigator.navigator:main"

[tool.setuptools.packages.find]
include = ["navigator"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/navigator"]
"share/navigator" = ["package.xml"]

[tool.pixi.package]
name = "undefined"
version = "0.0.0"

[tool.pixi.package.build.backend]
name = "pixi-build-ros"
git = "https://github.com/ruben-arts/pixi-build-backends"
subdirectory = "backends/pixi-build-ros"
branch = "fix/ros-backend"

[tool.pixi.package.build.config]
distro = "humble"
debug_dir = "pixi-build-debug" 

