[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "talker"
version = "0.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
talker = "talker.talker:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["talker"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/talker"]
"share/talker" = ["package.xml"]

[tool.pixi.project]
preview = ["pixi-build"]
platforms = ["osx-arm64"]
channels = ["conda-forge", "robostack-staging"]

[tool.pixi.package]
name = "talker"
version = "1.2.3"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
setuptools = ">=73.0.0"
uv = "==0.5.20"

[tool.pixi.package.run-dependencies]
ros-humble-rclpy = ">=3.3.11,<4"
ros-humble-geometry-msgs = ">=4.2.3,<5"
ros-humble-turtlesim = ">=1.4.2,<2"
