[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "talker"
version = "0.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
talker = "talker.talker:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["talker"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/talker"]
"share/talker" = ["package.xml"]

[tool.pixi.package]
name = "undefined"
version = "0.0.0"

[tool.pixi.package.build.backend]
name = "pixi-build-ros"
git = "https://github.com/ruben-arts/pixi-build-backends"
subdirectory = "backends/pixi-build-ros"
branch = "fix/ros-backend"

[tool.pixi.package.build.config]
distro = "humble"
debug_dir = "pixi-build-debug" 